-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Feature Freeze
-
None
-
-
e3a38654e6 (qt/qtmultimedia/dev) f20f987093 (qt/qtmultimedia/6.3) f576700d52 (qt/qtmultimedia/6.2) f576700d52 (qt/tqtc-qtmultimedia/6.2)
The multimedia-class documentation is critical, because of the large number of changes between Qt 5 and 6. Unfortunately it does not appear to have been maintained.
One error can be found here. It instructs developers to call a constructor that has been deleted:
imageCapture = new QImageCapture(camera);
If you look at the source where the constructor was deleted (qimagecapture.h), you see:
// This is here to flag an incompatibilities with Qt 5
QImageCapture(QCamera *) = delete;
- is required for
-
QTBUG-97469
Update Multimedia documentation
-
- Closed
-