doc: Fix QImageCapture related snippets

The code samples were not properly ported to take into account the
changes from the Qt 5 code base.

Fixes: QTBUG-99643
Change-Id: Ie30e39a3a4cdaff2c6881218a6f382396a3d5729
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>
(cherry picked from commit e3a38654e668a73a3beb2544f68ca348b0f28dc8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>